k8/manifests/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinematica-mongodb-deployment
  labels:
    app: cinematica-mongodb
spec:
  replicas: 1 # Cannot write 2 because MongoDB required replicaSets for 2 pods.
  selector:
    matchLabels:
      app: cinematica-mongodb
  template:
    metadata:
      labels:
        app: cinematica-mongodb
    spec:
      containers:
        - name: cinematica-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
