k8/manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinematica-backend-service
  labels:
    app: cinematica-backend
spec:
  selector:
    app: cinematica-backend
  ports:
    - port: 5001
      targetPort: 5001
  type: ClusterIP
