k8/manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinematica-frontend-service
  labels:
    app: cinematica-frontend
spec:
  selector:
    app: cinematica-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
