k8/manifests/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinematica-mongodb-service
  labels:
    app: cinematica-mongodb
spec:
  selector:
    app: cinematica-mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
